feat: Mock receiver service